--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "config": "^3.2.4",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.4",
+    "dotenv": "^8.2.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
