--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.18.1",
     "config": "^3.2.4",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.4",
