--- a/.env
+++ b/.env
@@ -1,2 +1,10 @@
+NODE_ENV=development
+PORT=9000
+
 CLOUDINARY_API_KEY=114185526176361
 CLOUDINARY_API_SECRET=EU6iCtGFRP9WUaOn2MSSM_YX31Q
+
+EMAIL_USERNAME=a9b94a0ec18317
+EMAIL_PASSWORD=31e4bd58caafe0
+EMAIL_HOST=	smtp.mailtrap.io
+EMAIL_PORT=2525
