--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Emmanuel Adebayo",
   "license": "ISC",
   "dependencies": {
+    "async": "^3.1.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.18.1",
     "config": "^3.2.4",
@@ -19,12 +20,14 @@
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "firebase": "^7.6.1",
+    "html-to-text": "^5.1.1",
     "joi": "^14.3.1",
     "lodash": "^4.17.15",
     "method-override": "^3.0.0",
     "mongoose": "^5.8.4",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0"
   }
