--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Music album manager",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "start:prod": "NODE_ENV=production nodemon server.js",
+    "debug": "ndb server.js"
   },
   "author": "Emmanuel Adebayo",
   "license": "ISC",
@@ -12,14 +15,18 @@
     "async": "^3.1.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.18.1",
+    "compression": "^1.7.4",
     "config": "^3.2.4",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.4",
     "dotenv": "^8.2.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
+    "express-mongo-sanitize": "^2.0.0",
     "express-session": "^1.17.0",
     "firebase": "^7.6.1",
+    "helmet": "^3.23.3",
+    "hpp": "^0.2.3",
     "html-to-text": "^5.1.1",
     "joi": "^14.3.1",
     "lodash": "^4.17.15",
@@ -29,6 +36,8 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.4.2",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "validator": "^13.1.1",
+    "xss-clean": "^0.1.1"
   }
 }
