--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.0.0",
+    "express-rate-limit": "^5.1.3",
     "express-session": "^1.17.0",
     "firebase": "^7.6.1",
     "helmet": "^3.23.3",
