--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "start:prod": "NODE_ENV=production nodemon server.js",
-    "debug": "ndb server.js"
+    "debug": "ndb server.js",
+    "sample": "node ./dev-data/data/import-dev-data --import",
+    "blowitallaway": "node ./dev-data/data/import-dev-data --delete"
   },
   "author": "Emmanuel Adebayo",
   "license": "ISC",
@@ -30,15 +32,20 @@
     "helmet": "^3.23.3",
     "hpp": "^0.2.3",
     "html-to-text": "^5.1.1",
+    "jimp": "^0.16.1",
     "joi": "^14.3.1",
     "lodash": "^4.17.15",
+    "md5": "^2.3.0",
     "method-override": "^3.0.0",
+    "moment": "^2.29.1",
     "mongoose": "^5.8.4",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "slugify": "^1.4.6",
+    "uuid": "^8.3.2",
     "validator": "^13.1.1",
     "xss-clean": "^0.1.1"
   },
